# cargo-lpatch

./: Cargo.toml  EXAMPLES.md  GIT_CONFIG.md  PROJECT_SUMMARY.md  README.md  README_zh.md  SYSTEM_GIT_CONFIG.md
.github/workflows/: ci.yml
src/: cargo_toml.rs  config.rs  crates_io.rs  git.rs  main.rs  test_suite.rs  tests.rs  workspace.rs
